cs-src/dev/security/constraints/K8sRestrictNamespaces.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: restrict-default-ns
spec:
  enforcementAction: deny
  parameters:
    restrictedNamespaces:
    - default
