cs-src/dev/security/constraints/psp_privilegedcontainer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
  annotations:
    configmanagement.gke.io/cluster-selector: selector-letter-a
    description: "Restricts containers with `securityContext.privileged` set to `true`."
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["config-management-system"]
    kinds:
      - apiGroups: ["*"]
        kinds:
          - Pod
          - Deployment
          - StatefulSet
          - DaemonSet
          - ReplicaSet
          - Job
